# ken-but-with-gemini

./: APP-STATUS.md  FIXES-COMPLETED.md  GEMINI-3-FIX.md  GEMINI-NATIVE-IMPLEMENTATION.md  README.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: llm.rs  local.rs  main.rs
src/lib/: providers.ts
